--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Redux Dispatch Example</title>
   </head>
   <body>
-    <script src="src/reducer.js"></script>
+    <script src="src/reducer.js">
+      chanegeState()
+    </script>
   </body>
 </html>
